tests/format/misc/errors/invalid-typescript-decorators/function.ts
// https://github.com/typescript-eslint/typescript-eslint/pull/2375

@decorator()
function foo(      ){}
